[project]
name = "asfquart"
version = "0.1.13"
requires-python = ">=3.10,<4"
authors = [{ name = "ASF Infrastructure", email = "users@infra.apache.org" }]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "ASF Quart Framework"
dependencies = [
    "aiohttp>=3.9.2,<4",
    "PyYAML>=6.0.1,<7",
    "quart>=0.20.0,<1",
    "ezt>=1.1,<2",
    "asfpy>=0.56,<1",
    "easydict>=1.13,<2",
    "exceptiongroup>=1.1.0; python_version<'3.11'",
    "watchfiles>=1.0.0,<2",
]

[project.optional-dependencies]
aioldap = ["bonsai"]

[dependency-groups]
test = [
    "pytest==7.2.0",
    "pytest-cov>=4.0.0,<5",
    "pytest-asyncio>=0.20.3,<1",
    "pytest-mock>=3.10.0,<4",
]

[project.urls]
Repository = "https://github.com/apache/infrastructure-asfquart"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "7.2"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "*.py"
markers = [
    "config: Configuration parsing tests",
    "session: Client session management tests",
    "auth: Authentication/Authorization tests",
]
asyncio_mode = "auto"
