[metadata]
author = ASF Infrastructure Team
author_email = users@infra.apache.org
description = ASF Quart Framework
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, LICENSE
license = Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
